# Context-aware-multimodal-instant-messaging-system

./: README.md  tmp_include_remaining.py  tmp_include_remaining_src_only.py  tmp_include_rewrite.py  tmp_include_scan.py
OpenAPI/chat-service/client/: CMakeLists.txt  OAIChatAcceptFriendApplication_200_response.cpp  OAIChatAcceptFriendApplication_200_response.h  OAIChatAcceptFriendApplication_200_response_data.cpp  OAIChatAcceptFriendApplication_200_response_data.h  OAIChatAcceptFriendApplication_request.cpp  OAIChatAcceptFriendApplication_request.h  OAIChatDefaultApi.cpp  OAIChatDefaultApi.h  OAIChatEnum.h  OAIChatHelpers.cpp  OAIChatHelpers.h  OAIChatHttpFileElement.cpp  OAIChatHttpFileElement.h  OAIChatHttpRequest.cpp  OAIChatHttpRequest.h  OAIChatOauth.cpp  OAIChatOauth.h  OAIChatObject.h  OAIChatRejectFriendApplication_200_response.cpp  OAIChatRejectFriendApplication_200_response.h  OAIChatSendFriendApplication_200_response.cpp  OAIChatSendFriendApplication_200_response.h  OAIChatSendFriendApplication_200_response_data.cpp  OAIChatSendFriendApplication_200_response_data.h  OAIChatSendFriendApplication_request.cpp  OAIChatSendFriendApplication_request.h  OAIChatSendTextMessage_200_response.cpp  OAIChatSendTextMessage_200_response.h  OAIChatSendTextMessage_200_response_data.cpp  OAIChatSendTextMessage_200_response_data.h  OAIChatSendTextMessage_request.cpp  OAIChatSendTextMessage_request.h  OAIChatServerConfiguration.h  OAIChatServerVariable.h  OAIChatclient.pri
src/: CMakeLists.txt  Controller.h  Main.cpp
src/common/: EventBus.h
src/contract/: BaseResponse.hpp
src/contract/system-provider/auth-context-provider/: Login.h
src/contract/system-provider/message-context-provider/: MessageView.h  SendTextMessage.h
src/contract/system-provider/relation-context-provider/: AcceptFriendApplication.h  ChatSessionView.h  FriendApplicationView.hpp  RejectFriendApplication.h  SendFriendApplication.h
src/contract/system-provider/user-context-provider/: GetUser.h  Register.hpp  SearchUser.h  UserView.hpp
src/resource/: resources.qrc
src/sys/auth-context/domain/exception/: AccountPasswordNotMatchedException.h  InvalidPasswordException.h  UserCredentialServiceDependencyException.h
src/sys/auth-context/starter/cpp/: AuthContextStarter.cpp
src/sys/auth-context/starter/include/: AuthContextStarter.h
src/sys/common/: Avatar.hpp  FileSize.hpp  Identity.hpp  RecipientRemark.hpp
src/sys/common/adapter/cpp/: UserClientAdapter.cpp
src/sys/common/adapter/include/: UserClientAdapter.h
src/sys/common/component/: Database.h  FileUtil.h  UserCredentialManager.h  Websocket.h
src/sys/common/event/: DomainEvent.h
src/sys/common/exception/: ApplicationDomainException.h  ApplicationException.h  ApplicationInfraException.h  ApplicationValidationException.h  DomainException.h  DomainValidationException.h  InfraExcception.h
src/sys/common/port/: UserClient.h
src/sys/file-context/starter/cpp/: FileContextStarter.cpp
src/sys/file-context/starter/include/: FileContextStarter.h
src/sys/message-context/application/cpp/: MessageApplicationService.cpp  MessageViewAssembler.cpp
src/sys/message-context/application/include/: MessageApplicationService.h  MessageViewAssembler.h
src/sys/message-context/domain/exception/: ChatSessionNotFoundException.h  FriendShipNotFoundException.h  InvalidTextException.h
src/sys/message-context/port/client/: BackendClient.h  RelationClient.h
src/sys/message-context/port/repository/: MessageRepository.h
src/sys/message-context/starter/: Starter.h
src/sys/notification-context/starter/cpp/: NotificationContextStarter.cpp
src/sys/notification-context/starter/include/: NotificationContextStarter.h
src/sys/relation-context/domain/event/: FriendApplicationAccepted.h  FriendShipCreated.h  PrivateChatSessionCreated.h
src/sys/relation-context/domain/exception/: FriendApplicationAlreadyProcessedException.h  FriendApplicationHandleUnauthorizedException.h  FriendApplicationNotFoundException.h  FriendApplicationServiceDependencyException.h  FriendApplicationValidatorDependencyException.h  FriendRelationAlreadyExistsException.h  InvalidApplicantUserIdException.h  InvalidApplyTimeException.h  InvalidFriendApplicationIdException.h  InvalidRecipientRemarkException.h  InvalidTargetUserIdException.h  InvalidVerificationMessageException.h  NotParticipantException.h  PendingFriendApplicationAlreadyExistsException.h
src/sys/relation-context/starter/cpp/: RelationContextStarter.cpp
src/sys/relation-context/starter/include/: RelationContextStarter.h
src/sys/starter/cpp/: AppStarter.cpp
src/sys/starter/include/: AppStarter.h
src/sys/user-context/domain/exception/: InvalidAccountException.h  InvalidAvatarException.h  InvalidNicknameException.h  InvalidPasswordException.h  InvalidPhoneException.h  InvalidUserIdException.h  PhoneHasBeenRegistered.h  UserNotFoundException.h  UserServiceDependencyException.h  UserValidatorDependencyException.h
src/sys/user-context/starter/cpp/: UserContextStarter.cpp
src/sys/user-context/starter/include/: UserContextStarter.h
src/ui/auth-widgets/cpp/: LoginWidget.cpp
src/ui/auth-widgets/include/: LoginWidget.h
src/ui/common/: UIEVentBus.cpp  UIEVentBus.h
src/ui/common-widgets/: SoundPlayer.h  ToastWidget.h
src/ui/main-widgets/cpp/: MainWindow.cpp  MiddleStack.cpp  NavBar.cpp  RightStack.cpp
src/ui/main-widgets/include/: MainWindow.h  MiddlePanel .h  MiddlePanel.h  MiddleStack.h  NavBar.h  RightStack.h
src/ui/message-widgets/include/: ChatSessionTitleWidget.h  MessageDelegate.h  MessageInputWidget.h  MessageList.h  MessageListModel.h  MessagePanel.h
src/ui/relation-widgets/cpp/: AddFriendRequestWidget.cpp  ChatSessionList.cpp  FriendApplicationDetail.cpp  FriendApplicationList.cpp
src/ui/relation-widgets/include/: AddFriendRequestWidget.h  ChatSessionList.h  FriendAddingWidget.h  FriendApplicationDetail.h  FriendApplicationList.h
src/ui/user-widgets/cpp/: RegisterWidget.cpp  UserIdDisplayWidget.cpp
src/ui/user-widgets/include/: RegisterWidget.h  SearchWindow.h  UserIdDisplayWidget.h
(+256 files in other folders)
